--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 45px;
+    margin: 20px 0px;
     padding-left: 8%;
     padding-right: 8%;
 }
@@ -31,9 +31,13 @@ nav ul li{
 .inputSearch{
     border-radius: 15px;
     padding: 7px;
-    background-color: gray;
+    background-color: rgb(66, 66, 66);
     width: 30%;
 }
+.inputSearch::placeholder{
+    color: whitesmoke;
+}
+
 
 nav ul li a{
     color: white;
