--- a/style.css
+++ b/style.css
@@ -2,13 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Be Vietnam Pro', sans-serif;
+}
+.img-fluid{
+    max-width: 500px;
 }
 .container-footer{
-    max-width: 1170;
-    background-color: rgb(208, 194, 222);
+    max-width: 1170px;
     margin: auto;
 }
-.row{
+.row-footer{
     display: flex;
     flex-wrap: wrap;
 }
@@ -21,18 +24,66 @@ ul{
 }
 .footer-col{
     width: 25%;
-    padding: 0 15px;
+    padding: 0 30px;
 }
 .footer-col h4{
     font-size: 18px;
-    color: rgb(77, 116, 150);
+    color: rgb(255, 255, 255);
     text-transform: capitalize;
-    margin-bottom: 30px;
-}*{
-    padding: 0;
-    margin: 0;
-    font-family: 'Inter';
+    margin-bottom: 35px;
+    font-weight: 600;
+    font-family: 'Be Vietnam Pro', sans-serif;
+    position: relative;
+}
+.footer-col h4::before{
+    content: '';
+    position: absolute;
+    left: 0%;
+    bottom: -10px;
+    background-color:#E42575 ;
+    height: 2px;
     box-sizing: border-box;
+    width: 50px;
+}
+.footer-col ul li:not(:last-child){
+margin-bottom: 10px;
+}
+.footer-col ul li a{
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: regular;
+    color:rgb(173, 173, 173);
+    display: block;
+    transition: all 0.3s ease-in-out;
+}
+.footer-col ul li a:hover{
+    color: #E42575;
+    padding-left: 10px;
+}
+.footer-col .social-links a{
+display: inline-block;
+height: 40px;
+width: 40px;
+background-color:#e4257580;
+margin: 0 10px 10px 0;
+text-align: center;
+line-height: 40px;
+border-radius: 50%;
+color: #ffffff;
+transition: all 0.5 ease-in-out;
+}
+.footer-col .social-links a:hover{
+    color: #E42575;
+    background-color: #ffffff;
+}
+/*responsive*/
+@media(max-width: 762px){
+    .footer-col{
+        width: 100%;
+        margin-bottom: 30px;
+    }
 }
 
 header{
@@ -82,7 +133,7 @@ nav ul li a:hover{
     color: rgb(0, 0, 0);
     text-decoration: none;
     border: 2px solid transparent;
-    font-weight: bold;
+    font-weight: 600;
     padding: 5px  25px;
     border-radius: 30px;
 }
