--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ main {
 
 /* Section Stats */
 #stats {
-    margin: 0px 70px;
+    margin: 50px 70px;
 }
 
 #stats-container {
@@ -119,6 +119,30 @@ main {
 p {
     margin: 0px !important;
 }
+
+/* Section Launchpad */
+#launchpad {
+    margin: 50px 70px;
+}
+
+.s-launchpad {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.time {
+    padding: 5px 10px;
+    background-color: #606060;
+    border-radius: 20px;
+    color: white;
+}
+
+.image-launchpad{
+    position: relative;
+}
+
+
 
 /* footer */
 .container-footer{
