--- a/style.css
+++ b/style.css
@@ -389,8 +389,52 @@ nav ul li a:hover{
   }
 
 
-
-  
-
-  
 /*Sección 1 final*/
+
+/*Sección popular*/
+
+.popular-collections {
+    background-color: rgb(18, 13, 24);
+    padding: 50px 0;
+    text-align: center;
+  }
+  
+  .popular-collections h2 {
+    font-size: 32px;
+    margin-bottom: 30px;
+    color: #ffffff;
+    padding-right: 1450px;
+  }
+  
+  .cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .card {
+    width: 300px;
+    background-color: rgb(18, 13, 24);
+    margin: 20px;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
+  }
+  
+  .card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 5px;
+  }
+  
+  .card h3 {
+    font-size: 24px;
+    margin-top: 20px;
+  }
+  
+  .card p {
+    font-size: 16px;
+    color: #666;
+    margin-top: 10px;
+  }
