--- a/style.css
+++ b/style.css
@@ -1,18 +1,28 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Be Vietnam Pro', sans-serif;
 }
+body{
+    background-color: #120C18 !important;
+
+}
 
 main {
     height: 2184px;
+    background-color: #120C18;
+}
+
+h2 {
+    color: white !important;
 }
 
 /* Section About Us */
 #about-us {
     margin-top: 200px;
     margin-left: 70px;
+
 }
 
 .container-cards {
@@ -31,6 +41,7 @@ main {
     margin-top: 10px;
     font-weight: bold;
 }
+
 .card-text {
     font-weight: normal;
 }
@@ -94,7 +105,7 @@ main {
 }
 
 .big-numbers {
-    color:rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -138,40 +149,165 @@ p {
     color: white;
 }
 
-.image-launchpad{
+.image-launchpad {
     position: relative;
+}
+
+/* Auctions */
+.finished-auctions {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 20rem);
+    justify-content: center;
+    background-color: #120C18;
+}
+
+.s-finished-auctions {
+    box-shadow: 0px 2px 8px 0px var(--clr-gray-light);
+    background-color: rgba(255, 255, 255, 0.284);
+    text-align: center;
+    border-radius: 1rem;
+    position: relative;
+    margin: 1rem;
+}
+
+.nft-img {
+    position: absolute;
+    background-image: url(https://imagedelivery.net/E-VnZk4fwouzlzwX_qz4fg/b433f021-0829-481e-8a8b-1e5ba984c000/auction);
+    height: 10rem;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.f-auction {
+    width: 8rem;
+    clip-path: circle(60px at center);
+    margin-top: 4.5rem;
+}
+
+.nft-name {
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.description {
+    margin: 1rem 2rem;
+    font-size: 0.9rem;
+}
+
+.ended {
+    width: 100%;
+    border: none;
+    font-size: 1rem;
+    font-weight: bold;
+    color: white;
+    padding: 1rem;
+    background-color: var(--clr-primary);
+}
+
+/* Twitter */
+.twitter-section {
+    background-color: #120C18;
+}
+
+.twitter-container h2 {
+    font-size: 24px;
+    color: rgb(255, 255, 255);
+    text-transform: capitalize;
+    margin-bottom: 35px;
+    text-align: center;
+    font-weight: 600;
+    font-family: 'Be Vietnam Pro', sans-serif;
+    position: relative;
+}
+
+.twitter-container i {
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: #e4257580;
+    margin: 10px 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #ffffff;
+    transition: all 0.5 ease-in-out;
+}
+
+.twitter-container ul li {
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-weight: regular;
+}
+
+.carousel-twit {
+    width: 400px;
+    height: 200px;
+    overflow: hidden;
+    position: relative;
+    background-color: #120C18;
+    padding: 70px 0;
+    max-width: 1170px;
+    margin: auto;
+}
+
+.comment {
+    width: 400px;
+    height: 200px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+/* Section Launchpad */
+#faq {
+    margin: 50px 70px;
+
 }
 
 
 
 /* footer */
-.container-footer{
+.container-footer {
     max-width: 1170px;
     margin: auto;
+    background-color: rgb(47, 47, 47) !important;
+
 }
-.row-footer{
+
+.row-footer {
     display: flex;
     flex-wrap: wrap;
 }
-ul{
+
+ul {
     list-style: none;
 }
-.footer-logo{
+
+.footer-logo {
     overflow: hidden;
     max-width: 200px;
 }
-.footer-logo img{
+
+.footer-logo img {
     width: 100%;
 }
-.footer{
-    background-color: rgb(47, 47, 47);
+
+.footer {
+    background-color: rgb(47, 47, 47) !important;
     padding: 70px 0;
 }
-.footer-col{
+
+.footer-col {
     width: 25%;
     padding: 0 30px;
 }
-.footer-col h4{
+
+.footer-col h4 {
     font-size: 18px;
     color: rgb(255, 255, 255);
     text-transform: capitalize;
@@ -180,52 +316,59 @@ ul{
     font-family: 'Be Vietnam Pro', sans-serif;
     position: relative;
 }
-.footer-col h4::before{
+
+.footer-col h4::before {
     content: '';
     position: absolute;
     left: 0%;
     bottom: -10px;
-    background-color:#E42575 ;
+    background-color: #E42575;
     height: 2px;
     box-sizing: border-box;
     width: 50px;
 }
-.footer-col ul li:not(:last-child){
-margin-bottom: 10px;
+
+.footer-col ul li:not(:last-child) {
+    margin-bottom: 10px;
 }
-.footer-col ul li a{
+
+.footer-col ul li a {
     font-size: 16px;
     text-transform: capitalize;
     color: #ffffff;
     text-decoration: none;
     font-weight: regular;
-    color:rgb(173, 173, 173);
+    color: rgb(173, 173, 173);
     display: block;
     transition: all 0.3s ease-in-out;
 }
-.footer-col ul li a:hover{
+
+.footer-col ul li a:hover {
     color: #E42575;
     padding-left: 10px;
 }
-.footer-col .social-links a{
-display: inline-block;
-height: 40px;
-width: 40px;
-background-color:#e4257580;
-margin: 0 10px 10px 0;
-text-align: center;
-line-height: 40px;
-border-radius: 50%;
-color: #ffffff;
-transition: all 0.5 ease-in-out;
+
+.footer-col .social-links a {
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: #e4257580;
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #ffffff;
+    transition: all 0.5 ease-in-out;
 }
-.footer-col .social-links a:hover{
+
+.footer-col .social-links a:hover {
     color: #E42575;
     background-color: #ffffff;
 }
+
 /*responsive*/
-@media(max-width: 762px){
-    .footer-col{
+@media(max-width: 762px) {
+    .footer-col {
         width: 100%;
         margin-bottom: 30px;
     }
@@ -233,7 +376,7 @@ transition: all 0.5 ease-in-out;
 
 /* Header */
 
-header{
+header {
     background-color: black;
     position: fixed;
     top: 0;
@@ -241,7 +384,7 @@ header{
     z-index: 1;
 }
 
-nav{
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -250,46 +393,47 @@ nav{
     padding-right: 8%;
 }
 
-nav ul li{
+nav ul li {
     list-style-type: none;
     display: inline-block;
-    padding: 10px   25px;
+    padding: 10px 25px;
 }
 
-.inputSearch{
+.inputSearch {
     border-radius: 15px;
     padding: 7px;
     background-color: rgb(66, 66, 66);
     width: 30%;
 }
-.inputSearch::placeholder{
+
+.inputSearch::placeholder {
     color: whitesmoke;
 }
 
 
-nav ul li a{
+nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
     text-transform: capitalize;
 }
 
-nav ul li a:hover{
+nav ul li a:hover {
     color: rgba(228, 37, 100, 100);
     transition: .3s;
 }
 
-.btn{
+.btn {
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
     text-decoration: none;
     border: 2px solid transparent;
     font-weight: 600;
-    padding: 5px  25px;
+    padding: 5px 25px;
     border-radius: 30px;
 }
 
-.btn:hover{
+.btn:hover {
     transform: scale(1.2);
     transition: .3s;
 }
