--- a/style.css
+++ b/style.css
@@ -391,8 +391,11 @@ header{
     width: 100%;
     z-index: 1;
 }
+header li{
+    margin-top: 20px;
+}
 
-nav {
+nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -401,49 +404,51 @@ nav {
     padding-right: 8%;
 }
 
-nav ul li {
+nav ul li{
     list-style-type: none;
     display: inline-block;
-    padding: 10px 25px;
+    padding: 10px   25px;
 }
 
-.inputSearch {
+.inputSearch{
     border-radius: 15px;
     padding: 7px;
     background-color: rgb(33, 22, 44);
     width: 30%;
 }
-
-.inputSearch::placeholder {
+.inputSearch::placeholder{
     color: whitesmoke;
 }
 
 
-nav ul li a {
+nav ul li a{
     color: white;
     text-decoration: none;
     font-weight: bold;
     text-transform: capitalize;
 }
 
-nav ul li a:hover {
+nav ul li a:hover{
     color: rgba(228, 37, 100, 100);
     transition: .3s;
 }
 
-.btn {
-    background-color: rgb(255, 255, 255);
+.button-header{
+    background: #E42575;
+   
     color: rgb(255, 255, 255);
     text-decoration: none;
     border: 2px solid transparent;
-    font-weight: 600;
-    padding: 5px 25px;
+    font-weight: 800;
+    
+    padding: 5px  25px;
     border-radius: 30px;
 }
 
-.btn:hover {
+.button-header:hover{
     transform: scale(1.2);
     transition: .3s;
+   
 }
 
 /*Sección 1*/
@@ -590,3 +595,67 @@ nav ul li a:hover {
     color: #666;
     margin-top: 10px;
   }
+
+  /*Noticias*/
+
+  .post-list {
+    display: flex;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    padding: 30px  15px;
+    background-color: rgb(18, 13, 24);
+   }
+
+   .post-list h2 {
+       color: #ffffff;
+      }
+
+   .post-list p {
+       color: #ffffff;
+      }
+
+   .post-list h4 {
+       font-size: 32px;
+       margin-bottom: 30px;
+       color: #ffffff;
+       padding-right: 0;
+       padding-bottom: 650px;
+       padding-left: 50px;
+     }
+
+   .content {
+       display: grid;
+       grid-template-columns: repeat(3, 1fr);
+       grid-gap: 20px;
+       max-width: 1000px;
+       margin: auto;
+       margin-left: 120px;
+   }
+
+   .post-img-1 {
+       background: url(img/DMI1.png);
+       width: 100%;
+       height: 200px;
+       background-size: cover;
+       background-position: center;
+       transition: .2s;
+   }
+
+   .post-img-2 {
+       background: url(img/DMI2.png);
+       width: 100%;
+       height: 200px;
+       background-size: cover;
+       background-position: center;
+       transition: .2s;
+   }
+
+   .post-img-3 {
+       background: url(img/DMI3.png);
+       width: 100%;
+       height: 200px;
+       background-size: cover;
+       background-position: center;
+       transition: .2s;
+   }
