--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
     box-sizing: border-box;
     font-family: 'Be Vietnam Pro', sans-serif;
     --color-background: --color-background;
-    --color-violet: 
+    --color-violet:
 }
-body{
+
+body {
     background-color: --color-background !important;
 
 }
@@ -158,7 +159,7 @@ p {
 /* Auctions */
 .auction {
     margin: 50px 70px;
-} 
+}
 
 .auction-text {
     color: white;
@@ -386,18 +387,22 @@ ul {
 
 /* Header */
 
-header{
+/* Estableciendo el box-sizing de todos los elementos */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+header {
     background-color: rgb(18, 13, 24);
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 1;
 }
-header li{
-    margin-top: 20px;
-}
 
-nav{
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -406,51 +411,72 @@ nav{
     padding-right: 8%;
 }
 
-nav ul li{
-    list-style-type: none;
-    display: inline-block;
-    padding: 10px   25px;
+nav ul {
+    display: flex;
+    flex-wrap: nowrap; /* cambiamor wrap a nowrap */
+    list-style: none;
+    margin: 0 5px; /* reducir el margen horizontal */
+    padding: 0;
 }
 
-.inputSearch{
+nav ul li {
+    padding: 10px 15px;
+    /* reducir padding */
+    white-space: nowrap;
+    /* otro nowrap */
+    text-align: center;
+}
+
+.inputSearch {
     border-radius: 15px;
     padding: 7px;
     background-color: rgb(33, 22, 44);
     width: 30%;
 }
-.inputSearch::placeholder{
-    color: whitesmoke;
+
+/* Que la imágen del logo esté responsive */
+nav img {
+    width: 15%;
+    height: auto;
 }
 
-
-nav ul li a{
+nav ul li a {
+    display: block;
     color: white;
     text-decoration: none;
     font-weight: bold;
     text-transform: capitalize;
 }
 
-nav ul li a:hover{
+nav ul li a:hover {
     color: rgba(228, 37, 100, 100);
     transition: .3s;
 }
 
-.button-header{
+.button-header {
     background: #E42575;
-   
     color: rgb(255, 255, 255);
     text-decoration: none;
     border: 2px solid transparent;
     font-weight: 800;
-    
-    padding: 5px  25px;
+    padding: 5px 25px;
     border-radius: 30px;
 }
 
-.button-header:hover{
+.button-header:hover {
     transform: scale(1.2);
     transition: .3s;
-   
+}
+
+/* Responsive */
+@media only screen and (max-width: 768px) {
+    .inputSearch {
+        width: 50%;
+    }
+    nav ul li {
+        padding: 10px;
+        /* reducir relleno de los elementos para que se ajusten mejor a pantallas pequeñas */
+    }
 }
 
 /*Sección 1*/
@@ -458,14 +484,14 @@ nav ul li a:hover{
     background-color: rgb(18, 13, 24);
     padding: 390px;
     padding-bottom: 400px;
-  }
+}
 
-  .contenedor {
+.contenedor {
     max-width: 1200px;
     margin: 0 auto;
-  }
+}
 
-  .launchpad-button {
+.launchpad-button {
     background-color: rgb(18, 13, 24);
     border: 2px solid #ffffff;
     border-radius: 50px;
@@ -478,9 +504,9 @@ nav ul li a:hover{
     margin-top: 300px;
     top: 10px;
     left: 400px;
-  }
+}
 
-  .gotolaunchpad-button {
+.gotolaunchpad-button {
     background-color: rgb(255, 255, 255);
     border: 2px solid #ffffff;
     border-radius: 50px;
@@ -493,28 +519,28 @@ nav ul li a:hover{
     margin-top: 650px;
     top: 15px;
     left: 400px;
-  }
+}
 
-  .gotolaunchpad-button:hover {
+.gotolaunchpad-button:hover {
     color: rgba(228, 37, 100, 100);
-  }
+}
 
 
-  .launchpad-text h2 {
+.launchpad-text h2 {
     color: white;
     max-width: 50%;
     font-weight: bold;
     margin-bottom: 16px;
     font-size: 40px;
-  }
+}
 
-  .launchpad-text p {
+.launchpad-text p {
     color: white;
     max-width: 50%;
     font-size: 20px;
-  }
+}
 
-  .slider {
+.slider {
     position: relative;
     float: right;
     position: absolute;
@@ -523,32 +549,37 @@ nav ul li a:hover{
     width: 30%;
     height: 100%;
     overflow: hidden;
-  }
-  
-  .slider ul {
+}
+
+.slider ul {
     padding: 0;
     display: flex;
 
     animation: slider 10s infinite;
-  }
+}
 
-  .slider li{
+.slider li {
     width: 100%;
     list-style: none;
     height: 100%;
-  }
+}
 
-  .slider li img {
+.slider li img {
     width: 300%;
-  }
+}
 
-  @keyframes slider{
-        0% { transform: translateX(0); } /* posición inicial */
-        100% { transform: translateX(-100%); } /* posición final */
-  }
+@keyframes slider {
+    0% {
+        transform: translateX(0);
+    }
 
+    /* posición inicial */
+    100% {
+        transform: translateX(-100%);
+    }
 
-/*Sección 1 final*/
+    /* posición final */
+}
 
 /*Sección popular*/
 
@@ -556,108 +587,108 @@ nav ul li a:hover{
     background-color: rgb(18, 13, 24);
     padding: 50px 0;
     text-align: center;
-  }
-  
-  .popular-collections h2 {
+}
+
+.popular-collections h2 {
     font-size: 32px;
     margin-bottom: 30px;
     color: #ffffff;
     padding-right: 1450px;
-  }
-  
-  .cards-container {
+}
+
+.cards-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
-  
-  .card {
+}
+
+.cardo {
     width: 300px;
-    background-color: rgb(18, 13, 24);
+    background-color: rgb(255, 255, 255);
     margin: 20px;
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
-  }
-  
-  .card img {
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.cardo img {
     width: 100%;
-    height: 200px;
+    height: 400px;
     object-fit: cover;
     border-radius: 5px;
-  }
-  
-  .card h3 {
+}
+
+.cardo h3 {
     font-size: 24px;
     margin-top: 20px;
-  }
-  
-  .card p {
+}
+
+.cardo p {
     font-size: 16px;
     color: #666;
     margin-top: 10px;
-  }
+}
 
-  /*Noticias*/
+/*Noticias*/
 
-  .post-list {
+.post-list {
     display: flex;
     min-height: 100vh;
     align-items: center;
     justify-content: center;
-    padding: 30px  15px;
+    padding: 30px 15px;
     background-color: rgb(18, 13, 24);
-   }
+}
 
-   .post-list h2 {
-       color: #ffffff;
-      }
+.post-list h2 {
+    color: #ffffff;
+}
 
-   .post-list p {
-       color: #ffffff;
-      }
+.post-list p {
+    color: #ffffff;
+}
 
-   .post-list h4 {
-       font-size: 32px;
-       margin-bottom: 30px;
-       color: #ffffff;
-       padding-right: 0;
-       padding-bottom: 650px;
-       padding-left: 50px;
-     }
+.post-list h4 {
+    font-size: 32px;
+    margin-bottom: 30px;
+    color: #ffffff;
+    padding-right: 0;
+    padding-bottom: 650px;
+    padding-left: 50px;
+}
 
-   .content {
-       display: grid;
-       grid-template-columns: repeat(3, 1fr);
-       grid-gap: 20px;
-       max-width: 1000px;
-       margin: auto;
-       margin-left: 120px;
-   }
+.content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    max-width: 1000px;
+    margin: auto;
+    margin-left: 120px;
+}
 
-   .post-img-1 {
-       background: url(img/DMI1.png);
-       width: 100%;
-       height: 200px;
-       background-size: cover;
-       background-position: center;
-       transition: .2s;
-   }
+.post-img-1 {
+    background: url(img/DMI1.png);
+    width: 100%;
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    transition: .2s;
+}
 
-   .post-img-2 {
-       background: url(img/DMI2.png);
-       width: 100%;
-       height: 200px;
-       background-size: cover;
-       background-position: center;
-       transition: .2s;
-   }
+.post-img-2 {
+    background: url(img/DMI2.png);
+    width: 100%;
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    transition: .2s;
+}
 
-   .post-img-3 {
-       background: url(img/DMI3.png);
-       width: 100%;
-       height: 200px;
-       background-size: cover;
-       background-position: center;
-       transition: .2s;
-   }
+.post-img-3 {
+    background: url(img/DMI3.png);
+    width: 100%;
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    transition: .2s;
+}
