--- a/style.css
+++ b/style.css
@@ -269,20 +269,10 @@ ul {
 }
 
 /* Header */
-
-/* Estableciendo el box-sizing de todos los elementos */
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
 header {
     background-color: rgb(18, 13, 24);
-    position: fixed;
-    top: 0;
     width: 100%;
-    z-index: 1;
+    display: flex;
 }
 
 nav {
@@ -296,17 +286,15 @@ nav {
 
 nav ul {
     display: flex;
-    flex-wrap: nowrap; /* cambiamor wrap a nowrap */
+    flex-wrap: nowrap;
     list-style: none;
-    margin: 0 5px; /* reducir el margen horizontal */
+    margin: 0;
     padding: 0;
 }
 
 nav ul li {
     padding: 10px 15px;
-    /* reducir padding */
     white-space: nowrap;
-    /* otro nowrap */
     text-align: center;
 }
 
@@ -317,7 +305,6 @@ nav ul li {
     width: 30%;
 }
 
-/* Que la imágen del logo esté responsive */
 nav img {
     width: 15%;
     height: auto;
@@ -332,7 +319,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: rgba(228, 37, 100, 100);
+    color: #E42575;
     transition: .3s;
 }
 
@@ -353,20 +340,43 @@ nav ul li a:hover {
 
 /* Responsive */
 @media only screen and (max-width: 768px) {
+    nav {
+        flex-wrap: wrap;
+        /* Pantalla bloqueada no scroll en x */
+        width: 100%;
+    }
+
+    nav ul {
+        width: 100%;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    nav ul li {
+        flex: 1 1 auto;
+        margin: 5px;
+        padding: 10px;
+        font-size: 14px;
+    }
+
     .inputSearch {
         width: 50%;
     }
-    nav ul li {
-        padding: 10px;
-        /* reducir relleno de los elementos para que se ajusten mejor a pantallas pequeñas */
+
+    nav img {
+        width: 40%;
+    }
+
+    .button-header {
+        text-align: center;
+        padding: 1px 90px;
     }
 }
 
 /*Sección 1*/
 #launchpad-inicial {
     background-color: rgb(18, 13, 24);
-    padding: 390px;
-    padding-bottom: 400px;
+    padding: 100px 20px 400px;
 }
 
 .contenedor {
@@ -384,9 +394,29 @@ nav ul li a:hover {
     font-size: 11px;
     font-weight: medium;
     position: absolute;
-    margin-top: 300px;
-    top: 10px;
-    left: 400px;
+    margin-top: 190px;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.launchpad-text {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.launchpad-text h2 {
+    color: white;
+    max-width: 100%;
+    font-weight: bold;
+    margin-bottom: 16px;
+    font-size: 40px;
+}
+
+.launchpad-text p {
+    color: white;
+    max-width: 100%;
+    font-size: 20px;
 }
 
 .gotolaunchpad-button {
@@ -395,72 +425,49 @@ nav ul li a:hover {
     border-radius: 50px;
     color: rgb(18, 13, 24);
     height: 70px;
-    width: 344px;
+    width: 90%;
+    max-width: 500px;
     font-size: 100%;
     font-weight: bold;
-    position: absolute;
-    margin-top: 650px;
-    top: 15px;
-    left: 400px;
+    display: block;
+    margin: 50px auto 0;
 }
 
 .gotolaunchpad-button:hover {
     color: rgba(228, 37, 100, 100);
 }
 
-
-.launchpad-text h2 {
-    color: white;
-    max-width: 50%;
-    font-weight: bold;
-    margin-bottom: 16px;
-    font-size: 40px;
-}
-
-.launchpad-text p {
-    color: white;
-    max-width: 50%;
-    font-size: 20px;
-}
-
 .slider {
+    width: 100%;
+    max-width: 500px;
+    margin: 50px auto 0;
     position: relative;
-    float: right;
-    position: absolute;
-    top: 30%;
-    right: 300px;
-    width: 30%;
-    height: 100%;
-    overflow: hidden;
 }
 
 .slider ul {
     padding: 0;
     display: flex;
-
     animation: slider 10s infinite;
 }
 
 .slider li {
-    width: 100%;
+    flex: 0 0 100%;
     list-style: none;
-    height: 100%;
 }
 
 .slider li img {
-    width: 300%;
+    width: 100%;
+    height: auto;
 }
 
 @keyframes slider {
     0% {
         transform: translateX(0);
     }
-
     /* posición inicial */
     100% {
         transform: translateX(-100%);
     }
-
     /* posición final */
 }
 
