--- a/style.css
+++ b/style.css
@@ -369,7 +369,7 @@ nav ul li a:hover {
 
     .button-header {
         text-align: center;
-        padding: 1px 90px;
+        padding: 1px 170px;
     }
 }
 
@@ -409,7 +409,7 @@ nav ul li a:hover {
     color: white;
     max-width: 100%;
     font-weight: bold;
-    margin-bottom: 16px;
+    margin-bottom: 16spx;
     font-size: 40px;
 }
 
@@ -471,53 +471,71 @@ nav ul li a:hover {
     /* posición final */
 }
 
-/*Sección popular*/
+/* Sección popular */
 
 .popular-collections {
     background-color: rgb(18, 13, 24);
     padding: 50px 0;
     text-align: center;
-}
-
-.popular-collections h2 {
+  }
+  
+  .popular-collections h2 {
     font-size: 32px;
     margin-bottom: 30px;
     color: #ffffff;
-    padding-right: 1450px;
-}
-
-.cards-container {
+  }
+  
+  .cards-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-}
-
-.cardo {
+  }
+  
+  .cardo {
     width: 300px;
     background-color: rgb(255, 255, 255);
     margin: 20px;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
-}
-
-.cardo img {
+    width: 300px;
+    height: 520px;
+  }
+  
+  .cardo img {
     width: 100%;
     height: 400px;
     object-fit: cover;
     border-radius: 5px;
-}
-
-.cardo h3 {
+  }
+  
+  .cardo h3 {
     font-size: 24px;
     margin-top: 20px;
-}
-
-.cardo p {
+  }
+  
+  .cardo p {
     font-size: 16px;
     color: #666;
     margin-top: 10px;
-}
+  }
+  
+    @media only screen and (min-width: 768px) {
+    .cards-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        flex-direction: row;
+        align-items: flex-start;
+    }
+      
+    .cardo {
+        background-color: #ffffff;
+        margin-bottom: 20px;
+        width: 45%;
+        margin: 10px;
+    }
+  }
 
 /*Noticias*/
 
@@ -526,7 +544,7 @@ nav ul li a:hover {
     min-height: 100vh;
     align-items: center;
     justify-content: center;
-    padding: 30px 15px;
+    padding: 30px 30px;
     background-color: rgb(18, 13, 24);
 }
 
@@ -538,22 +556,12 @@ nav ul li a:hover {
     color: #ffffff;
 }
 
-.post-list h4 {
-    font-size: 32px;
-    margin-bottom: 30px;
-    color: #ffffff;
-    padding-right: 0;
-    padding-bottom: 650px;
-    padding-left: 50px;
-}
-
 .content {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
     max-width: 1000px;
     margin: auto;
-    margin-left: 120px;
 }
 
 .post-img-1 {
@@ -581,4 +589,69 @@ nav ul li a:hover {
     background-size: cover;
     background-position: center;
     transition: .2s;
+}
+
+.post {
+    box-shadow: 0 1px 6px 1px rgba(0, 0, 0, 0.2);
+    transition: .2s;
+    overflow: hidden;
+}
+
+.post:hover{
+    transform: translateY(-4px);
+    box-shadow: 0 1px 14px 2px rgba(0, 0, 0, 0.2);
+}
+
+.post-header{
+    width: 100%;
+    height: 200px;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+.post:hover .post-img-1,
+.post:hover .post-img-2,
+.post:hover .post-img-3 {
+    transform: scale(1.1);
+}
+
+.post-body{
+    padding: 15px;
+    text-align: center;
+}
+
+.post-body span{
+    display: inline-block;
+    color:rgb(173, 173, 173);
+    margin-bottom: 10px;
+}
+
+.post-body h2{
+    margin-bottom: 15px;
+}
+
+.post-body p{
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+.post-body .post-link{
+    display: block;
+    text-decoration: none;
+    padding: 10px;
+    background: #E42575;
+    color: #ffffff;
+    width: 50%;
+    margin: auto;
+    border-radius: 20px;
+}
+
+.post-body .post-link:hover{
+    background: #eb3c85;
+}
+
+@media (max-width: 840px) {
+    .content{
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
