--- a/auctionSection.css
+++ b/auctionSection.css
@@ -1,8 +1,27 @@
 .auction{
     background-color: #1F1F1F;
     margin: 50px 70px;
+    display: flex;
+
 }
 
 .auction-text {
     color: rgb(223, 223, 223);
+}
+.col-left-auction{
+    width: 50%;
+    padding: 50px;
+
+}
+.col-right-aucttion{
+    width: 50%;
+    padding: 50%;
+}
+.auction-img-left{
+    width: 8rem;
+    clip-path: circle(60px at center);
+    margin-top: 4.5rem;
+}
+.auction-img-right{
+    width: 8rem;
 }
