--- a/twitterSection.css
+++ b/twitterSection.css
@@ -1,55 +1,53 @@
-.twitter-section {
-    background-color: --color-background;
+.twitter{
+    background-color: black;
 }
-
-.twitter-container h2 {
-    font-size: 24px;
-    color: rgb(255, 255, 255);
-    text-transform: capitalize;
-    margin-bottom: 35px;
-    text-align: center;
-    font-weight: 600;
-    font-family: 'Be Vietnam Pro', sans-serif;
-    position: relative;
+.twitter-title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-
-.twitter-container i {
-    display: inline-block;
-    height: 40px;
-    width: 40px;
-    background-color: #e4257580;
-    margin: 10px 10px 10px 0;
-    text-align: center;
-    line-height: 40px;
-    border-radius: 50%;
-    color: #ffffff;
-    transition: all 0.5 ease-in-out;
+.twitter-title a{
+        display: inline-block;
+        height: 40px;
+        width: 40px;
+        background-color: #e4257580;
+        margin: 0 10px 10px 0;
+        text-align: center;
+        line-height: 40px;
+        border-radius: 50%;
+        color: #ffffff;
+        transition: all 0.5 ease-in-out;
 }
-
-.twitter-container ul li {
-    font-size: 16px;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    font-weight: regular;
+.twitter-title h2{
+    font-size: 2em;
+  text-align: center;
+  margin: 0 auto;
+  max-width: 80%;
 }
-
-.carousel-twit {
-    width: 400px;
+.twitter-carousel {
+    align-items: center;
+    width: 100%;
     height: 200px;
     overflow: hidden;
     position: relative;
-    background-color: --color-background;
-    padding: 70px 0;
-    max-width: 1170px;
-    margin: auto;
-}
-
-.comment {
-    width: 400px;
+  }
+  
+  .comment {
+    text-align: center;
+    display: inline-block;
+    width: 800px;
+    max-width: 80%;
     height: 200px;
     position: absolute;
     top: 0;
     left: 0;
     opacity: 0;
     transition: opacity 1s ease-in-out;
-}
+    color: rgb(255, 255, 255);
+  }
+  @media (max-width: 768px) {
+    .comment {
+        transition: opacity 1s ease-in-out;
+    }
+  }
+  
