--- a/auctionSection.css
+++ b/auctionSection.css
@@ -1,27 +1,53 @@
 .auction{
-    background-color: #1F1F1F;
-    margin: 50px 70px;
+    background-color: #120C18;
+}
+.row-auction{
     display: flex;
-
+    flex-wrap: wrap;
 }
 
 .auction-text {
     color: rgb(223, 223, 223);
 }
-.col-left-auction{
+.col-auction{
+    flex-basis: 50%;
+  padding: 20px;
+  box-sizing: border-box;
     width: 50%;
     padding: 50px;
 
-}
-.col-right-aucttion{
-    width: 50%;
-    padding: 50%;
 }
 .auction-img-left{
     width: 8rem;
     clip-path: circle(60px at center);
     margin-top: 4.5rem;
+
 }
 .auction-img-right{
-    width: 8rem;
+    max-width: 100%;
+  height: auto;
+  border-radius: 1em;
+  color: #1F1F1F;
 }
+
+.col-auction .social-auction a {
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: #e4257580;
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #ffffff;
+    transition: all 0.5 ease-in-out;
+}
+
+.col-auction .social-auction a:hover {
+    color: #E42575;
+    background-color: #ffffff;
+}
+@media (max-width: 768px) {
+    .col-auction {
+      flex-basis: 100%;
+    }}
