--- a/finishedAuctionSection.css
+++ b/finishedAuctionSection.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, 20rem);
     justify-content: center;
-    background-color: black;
+    background-color: #120C18;
 }
 
 .s-finished-auctions {
