--- a/finishedAuctionSection.css
+++ b/finishedAuctionSection.css
@@ -15,14 +15,31 @@
     margin: 1rem;
 }
 
-.nft-img {
+.nft-img{
     position: absolute;
     background-image: url(https://imagedelivery.net/E-VnZk4fwouzlzwX_qz4fg/b433f021-0829-481e-8a8b-1e5ba984c000/auction);
     height: 10rem;
     width: 100%;
     background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
+}
+.class{
+    background-image: url(https://images.unsplash.com/photo-1645731504636-72725e46b26b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60) !important;
+}
+.s{
+    background-image: url(https://images.unsplash.com/photo-1503455637927-730bce8583c0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
+}
+.t{
+    background-image: url(https://images.unsplash.com/photo-1496715976403-7e36dc43f17b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
+}
+.f{
+    background-image: url(https://images.unsplash.com/photo-1486848538113-ce1a4923fbc5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1049&q=80);
+}
+.fi{
+    background-image: url(https://images.unsplash.com/photo-1579783902614-a3fb3927b6a5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1045&q=80);
+}
+.x{
+    background-image: url(https://images.unsplash.com/photo-1561214115-f2f134cc4912?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1009&q=80);
 }
 .f-auction {
     width: 8rem;
