--- a/Components/AuctionCards/auctionCard.css
+++ b/Components/AuctionCards/auctionCard.css
@@ -48,4 +48,4 @@
   width: 100%;
   height: auto;
   border-radius: 12px 12px 0px 0px;
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=auctionCard.css.map */
