--- a/Components/Horizontalcards/horizontalCard.css
+++ b/Components/Horizontalcards/horizontalCard.css
@@ -90,4 +90,4 @@
   padding: 0px 10px;
   margin-bottom: 20px;
   font-family: "Be Vietnam Pro", sans-serif;
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=horizontalCard.css.map */
