--- a/Components/Horizontalcards/horizontalCard.html
+++ b/Components/Horizontalcards/horizontalCard.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Components/Horizontalcards/horizontalCard.css">
     <title>Card web component</title>
 </head>
 
@@ -16,9 +16,8 @@
 
     <card-horizontal></card-horizontal>
 
+    <script type="module" src="/Components/Horizontalcards/horizontalCard.js"></script>
 
-
-    <script type="module" src="horizontalCard.js"></script>
 </body>
 
 </html>
