que cancelemos web dice

--- a/public/Components/Horizontalcards/horizontalCard.html
+++ b/public/Components/Horizontalcards/horizontalCard.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/Components/Horizontalcards/horizontalCard.css">
+
+    <link rel="stylesheet" href="./horizontalCard.css">
     <title>Card web component</title>
 </head>
 
