--- a/public/Components/Comments/comment.css
+++ b/public/Components/Comments/comment.css
@@ -59,6 +59,13 @@
 #comment_number {
   margin-left: 8px;
 }
+#comment_noComment {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 15px;
+  color: white;
+}
 
 @media only screen and (max-width: 768px) {
   #comment_user {
