--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-.hidden{
+.hidden {
     display: none;
 }
+
 * {
     margin: 0;
     padding: 0;
@@ -609,10 +610,12 @@ nav ul li a:hover {
     0% {
         transform: translateX(0);
     }
+
     /* posición inicial */
     100% {
         transform: translateX(-100%);
     }
+
     /* posición final */
 }
 
@@ -622,21 +625,21 @@ nav ul li a:hover {
     background-color: rgb(18, 13, 24);
     padding: 50px 0;
     text-align: center;
-  }
-  
-  .popular-collections h2 {
+}
+
+.popular-collections h2 {
     font-size: 32px;
     margin-bottom: 30px;
     color: #ffffff;
-  }
-  
-  .cards-container {
+}
+
+.cards-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
-  
-  .cardo {
+}
+
+.cardo {
     width: 300px;
     background-color: rgb(255, 255, 255);
     margin: 20px;
@@ -645,27 +648,27 @@ nav ul li a:hover {
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
     width: 300px;
     height: 520px;
-  }
-  
-  .cardo img {
+}
+
+.cardo img {
     width: 100%;
     height: 400px;
     object-fit: cover;
     border-radius: 5px;
-  }
-  
-  .cardo h3 {
+}
+
+.cardo h3 {
     font-size: 24px;
     margin-top: 20px;
-  }
-  
-  .cardo p {
+}
+
+.cardo p {
     font-size: 16px;
     color: #666;
     margin-top: 10px;
-  }
-  
-    @media only screen and (min-width: 768px) {
+}
+
+@media only screen and (min-width: 768px) {
     .cards-container {
         display: flex;
         flex-wrap: wrap;
@@ -673,14 +676,14 @@ nav ul li a:hover {
         flex-direction: row;
         align-items: flex-start;
     }
-      
+
     .cardo {
         background-color: #ffffff;
         margin-bottom: 20px;
         width: 45%;
         margin: 10px;
     }
-  }
+}
 
 /*Noticias*/
 
@@ -742,12 +745,12 @@ nav ul li a:hover {
     overflow: hidden;
 }
 
-.post:hover{
+.post:hover {
     transform: translateY(-4px);
     box-shadow: 0 1px 14px 2px rgba(0, 0, 0, 0.2);
 }
 
-.post-header{
+.post-header {
     width: 100%;
     height: 200px;
     cursor: pointer;
@@ -760,27 +763,27 @@ nav ul li a:hover {
     transform: scale(1.1);
 }
 
-.post-body{
+.post-body {
     padding: 15px;
     text-align: center;
 }
 
-.post-body span{
+.post-body span {
     display: inline-block;
-    color:rgb(173, 173, 173);
+    color: rgb(173, 173, 173);
     margin-bottom: 10px;
 }
 
-.post-body h2{
+.post-body h2 {
     margin-bottom: 15px;
 }
 
-.post-body p{
+.post-body p {
     line-height: 1.5;
     margin-bottom: 20px;
 }
 
-.post-body .post-link{
+.post-body .post-link {
     display: block;
     text-decoration: none;
     padding: 10px;
@@ -791,12 +794,75 @@ nav ul li a:hover {
     border-radius: 20px;
 }
 
-.post-body .post-link:hover{
+.post-body .post-link:hover {
     background: #eb3c85;
 }
 
 @media (max-width: 840px) {
-    .content{
+    .content {
         grid-template-columns: repeat(2, 1fr);
     }
+}
+
+/*infoNFT*/
+article.product-card-container {
+    display: flex;
+    align-items: center;
+    background-color: black;
+    color: white;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+img.product-img {
+    max-width: 50%;
+    height: auto;
+    margin-right: 40px;
+    border-radius: 20px;
+}
+
+div.product-descripcion {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-grow: 1;
+    color: white;
+    margin-left: 40px;
+}
+
+div.product-descripcion h2 {
+    margin: 0;
+    font-size: 40px;
+}
+
+div.product-descripcion p {
+    margin: 0;
+    font-size: 16px;
+}
+
+button {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: white;
+    border-radius: 5px;
+    border: none;
+    color: black;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.next-btn {
+    margin: 20px;
+    background-color: #E42575;
+    border-radius: 50px;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%;
 }
