--- a/style.css
+++ b/style.css
@@ -767,7 +767,7 @@ button {
     color: white;
     font-size: 18px;
     cursor: pointer;
-    position: fixed;
+    position:relative;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
