--- a/public/Components/AuctionCards/auctionCard.scss
+++ b/public/Components/AuctionCards/auctionCard.scss
@@ -8,6 +8,50 @@ $font-stack: 'Be Vietnam Pro', sans-serif;
     padding: 0px;
     box-sizing: border-box,
 }
+body {
+  background-color: #120C18 !important;
+
+}
+.filters {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+
+  .filter-button {
+  background-color: $primary-color-text;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  outline: none;
+  padding: 10px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  .button-1:hover,
+  .button-1:focus {
+    background-color: #F082AC;
+  }
+    &.active {
+      background-color: #F082AC;
+      color: #fff;
+    }
+  }
+}
 .auction-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, 20rem);
