--- a/public/Components/AuctionCards/auctionCard.css
+++ b/public/Components/AuctionCards/auctionCard.css
@@ -14,18 +14,38 @@ body {
   margin-bottom: 20px;
 }
 .filters .filter-button {
-  margin-right: 10px;
-  padding: 8px 16px;
-  border: none;
-  border-radius: 20px;
-  background-color: #eee;
-  color: #333;
-  font-size: 16px;
-  font-weight: bold;
+  background-color: #E42575;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
   cursor: pointer;
+  display: inline-block;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  outline: none;
+  padding: 10px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  -moz-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+.filters .filter-button .button-1:hover,
+.filters .filter-button .button-1:focus {
+  background-color: #F082AC;
 }
 .filters .filter-button.active {
-  background-color: #333;
+  background-color: #F082AC;
   color: #fff;
 }
 
