Add filter changes.

--- a/public/Components/AuctionCards/auctionCard.html
+++ b/public/Components/AuctionCards/auctionCard.html
@@ -20,11 +20,22 @@
 
     <div class="filters">
         <button class="filter-button active" data-category="all">All</button>
-        <button class="filter-button" data-category="price">Price</button>
         <button class="filter-button" data-category="sol">Sol</button>
         <button class="filter-button" data-category="eth">Eth</button>
         <button class="filter-button" data-category="btc">Btc</button>
-      </div>           
+    </div> 
+
+    <div class="dropdown-filters">
+        <div class="dropdown">
+            <button class="dropdown__btn">Collection</button>
+            <div class="dropdown__content">
+                <a class="dropdown__option" href="#">Link 1</a>
+                <a class="dropdown__option" href="#">Link 2</a>
+                <a class="dropdown__option" href="#">Link 3</a>
+            </div>
+        </div>
+    </div> 
+
     <auction-card></auction-card>
 
     <footer>
