Add filter changes.

--- a/public/Components/AuctionCards/auctionCard.html
+++ b/public/Components/AuctionCards/auctionCard.html
@@ -39,18 +39,18 @@
           Collection
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item active" class="collection-dropdown" href="#" data-category="all">All</a>
-          <a class="dropdown-item" class="collection-dropdown"href="#" data-category="okay-bears">Okay Bears</a>
-          <a class="dropdown-item" class="collection-dropdown" href="#"data-category="blockstars">Blockstars</a>
-          <a class="dropdown-item" class="collection-dropdown" href="#"data-category="nakamigos">Nakamigos</a>
-          <a class="dropdown-item" class="collection-dropdown"href="#"data-category="soul-dogs">Soul Dogs</a>
-          <a class="dropdown-item" class="collection-dropdown"href="#"data-category="viktordao">ViktorDAO</a>
-          <a class="dropdown-item" class="collection-dropdown"href="#"data-category="node-monkey">Node Monkey</a>
-          <a class="dropdown-item" class="collection-dropdown"href="#"data-category="mutant-ape">Mutant Ape</a>
-          <a class="dropdown-item" class="collection-dropdown"href="#"data-category="doodles">Doodles</a>
-          <a class="dropdown-item" class="collection-dropdown"href="#"data-category="degods">DeGods</a>
-          <a class="dropdown-item" class="collection-dropdown"href="#"data-category="yoots">yoots</a>
-          <a class="dropdown-item" class="collection-dropdown"href="#"data-category="jomohippo">JOMOhippo</a>
+          <a class="dropdown-item active collection-dropdown" href="#" data-category="all">All</a>
+          <a class="dropdown-item collection-dropdown" href="#" data-category="okay-bears">Okay Bears</a>
+          <a class="dropdown-item collection-dropdown"  href="#"data-category="blockstars">Blockstars</a>
+          <a class="dropdown-item collection-dropdown" href="#"data-category="nakamigos">Nakamigos</a>
+          <a class="dropdown-item collection-dropdown" href="#"data-category="soul-dogs">Soul Dogs</a>
+          <a class="dropdown-item collection-dropdown" href="#"data-category="viktordao">ViktorDAO</a>
+          <a class="dropdown-item collection-dropdown" href="#"data-category="node-monkey">Node Monkey</a>
+          <a class="dropdown-item collection-dropdown" href="#"data-category="mutant-ape">Mutant Ape</a>
+          <a class="dropdown-item collection-dropdown" href="#"data-category="doodles">Doodles</a>
+          <a class="dropdown-item collection-dropdown" href="#"data-category="degods">DeGods</a>
+          <a class="dropdown-item collection-dropdown" href="#"data-category="yoots">yoots</a>
+          <a class="dropdown-item collection-dropdown" href="#"data-category="jomohippo">JOMOhippo</a>
         </div>
       </div>
       <div class="dropdown">
